force-app/main/default/objects/ProjectTask__c/ProjectTask__c.object-meta.xml
<CustomObject>
    <description>Agoura Custom Object</description>
    <label>Project Task</label>
    <nameField>
        <displayFormat>TASK-{0000000000}</displayFormat>
        <label>Task Unique Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>