force-app/main/default/objects/ProjectTask__c/fields/Accept__c.field-meta.xml
<CustomField>
    <fullName>Accept__c</fullName>
    <label>Acceptance Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>