force-app/main/default/objects/ProjectTask__c/fields/Affected_Version__c.field-meta.xml
<CustomField>
    <fullName>Affected_Version__c</fullName>
    <label>Affected Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>