force-app/main/default/objects/ProjectTask__c/fields/Formatted_Status__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Status__c</fullName>
    <label>Formatted Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>