force-app/main/default/objects/ProjectTask__c/fields/Formatted_Type__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Type__c</fullName>
    <formula>IF(TEXT(Type__c)  = &apos;Bug&apos;  &amp;&amp; TEXT(Bug_Type__c)  &lt;&gt; Null, TEXT(Type__c)  &amp; &apos;: &apos; &amp; TEXT(Bug_Type__c), TEXT(Type__c))</formula>
    <label>Formatted Type</label>
    <type>Text</type>
</CustomField>