force-app/main/default/objects/ProjectTask__c/fields/Master_Task__c.field-meta.xml
<CustomField>
    <fullName>Master_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Task</label>
    <referenceTo>ProjectTask__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>