force-app/main/default/objects/ProjectTask__c/fields/Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner__c</fullName>
    <description>Field label used as section label of Project Task</description>
    <label>Product Owner</label>
    <length>1</length>
    <type>Text</type>
</CustomField>