force-app/main/default/objects/ProjectTask__c/fields/Project_Team__c.field-meta.xml
<CustomField>
    <fullName>Project_Team__c</fullName>
    <description>Field label used as section label of Project Task</description>
    <label>Project Team</label>
    <length>1</length>
    <type>Text</type>
</CustomField>