force-app/main/default/objects/ProjectTask__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <label>Reported By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>