force-app/main/default/objects/ProjectTask__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Bug Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cannot Reproduce</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
            <value>
                <fullName>Won&apos;t Fix</fullName>
            </value>
            <value>
                <fullName>Works as Designed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>