force-app/main/default/objects/ProjectTask__c/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <label>Bug Resolved Date</label>
    <type>Date</type>
</CustomField>