force-app/main/default/objects/ProjectTask__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>Sprint__c.Project__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sprint__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>