force-app/main/default/objects/ProjectTask__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#33CCFF</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Ready to Test</fullName>
                <color>#F96FB7</color>
                <label>Ready to Test</label>
            </value>
            <value>
                <fullName>Testing</fullName>
                <color>#A845DC</color>
                <label>Testing</label>
            </value>
            <value>
                <fullName>Ready to Deploy</fullName>
                <color>#FFCC33</color>
                <label>Ready to Deploy</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <color>#666666</color>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>Resolved</fullName>
                <color>#419249</color>
                <label>Resolved</label>
            </value>
            <value>
                <fullName>Done</fullName>
                <color>#78C953</color>
                <label>Done</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>