force-app/main/default/objects/ProjectTask__c/fields/Sub_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Sub_Tasks__c</fullName>
    <description>Field label used on Project Task</description>
    <label>Sub Tasks</label>
    <length>1</length>
    <type>Text</type>
</CustomField>