force-app/main/default/objects/ProjectTask__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Field label used as section label of Project Task</description>
    <label>Summary</label>
    <length>1</length>
    <type>Text</type>
</CustomField>