force-app/main/default/objects/ProjectTask__c/fields/Task_Number__c.field-meta.xml
<CustomField>
    <fullName>Task_Number__c</fullName>
    <defaultValue>&quot;AutoNumber&quot;</defaultValue>
    <label>Task #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>