force-app/main/default/objects/ProjectTask__c/fields/Task_Number_Int__c.field-meta.xml
<CustomField>
    <fullName>Task_Number_Int__c</fullName>
    <label>Task Number Int</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>