force-app/main/default/objects/ProjectTask__c/fields/Time_Logged__c.field-meta.xml
<CustomField>
    <fullName>Time_Logged__c</fullName>
    <label>Time Logged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>