force-app/main/default/objects/ProjectTask__c/fields/Time_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Time_Remaining__c</fullName>
    <label>Time Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>