force-app/main/default/objects/ProjectTask__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
            <value>
                <fullName>Improvement</fullName>
            </value>
            <value>
                <fullName>New Feature</fullName>
            </value>
            <value>
                <fullName>Sub-Task</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
                <default>true</default>
                <label>Task</label>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>User Story</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>